fix: Change spacing on writing samples and Infographics.

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ legend {
 	max-width: 400px;
 	justify-content: center;
 	text-align: center;
-	margin: 0px 0px 0px 0px;
+	margin: 0px 0px 60px 0px;
 	border-bottom: 0;
 }
 
